--- a/my-app/src/app/components/google-log-in/google-log-in.component.html
+++ b/my-app/src/app/components/google-log-in/google-log-in.component.html
@@ -1,6 +1,6 @@
 <div class="fixed inset-0 flex items-center justify-center z-50 bg-black bg-opacity-50 backdrop-blur">
     <!-- Image de fond -->
-    <img src="../../../assets/map.webp" alt="map" class="absolute inset-0 w-full h-full object-cover blur-lg">
+    <img src="assets/map.webp" alt="map" class="absolute inset-0 w-full h-full object-cover blur-lg">
     
     <!-- Modale -->
     <div class="bg-white m-8 p-8 rounded-lg shadow-lg relative z-10 text-center">
