--- a/my-app/src/app/components/google-log-in/google-log-in.component.html
+++ b/my-app/src/app/components/google-log-in/google-log-in.component.html
@@ -3,7 +3,7 @@
     <img src="assets/map.webp" alt="map" class="absolute inset-0 w-full h-full object-cover blur-lg">
     
     <!-- Modale -->
-    <div class="bg-white m-8 p-8 rounded-lg shadow-lg relative z-10 text-center">
+    <div class="bg-[url('assets/scroll.jpg')] bg-cover m-8 p-8 rounded-lg shadow-lg relative z-10 text-center">
       <h1 class="text-xl font-bold mb-4">Oyé Oyé</h1>
       <p class="m-4">De part votre connection, nous reçevons votre consentement à nos CGU et de de ce fait à l'utilisation de votre géolocalisation.</p>
       <div>
