--- a/my-app/src/app/components/map/map.component.html
+++ b/my-app/src/app/components/map/map.component.html
@@ -1,7 +1,11 @@
-<div class="border-black border-2 m-16 relative">
-  <div class="bg-blue-500 bg-opacity-75 text-white p-4 flex flex-col place-items-center w-fit z-10 absolute top-0 right-0">
+<div class="border-black border-2 sm:m-16 relative">
+  <div class="bg-slate-700 bg-opacity-75 text-white p-4 flex flex-col place-items-center w-[60%] sm:w-fit z-10 absolute top-0 right-0">
     <p>Vous êtes à {{ city }},</p>
-    <p>{{ weatherInfo }}</p>
+    <div>
+      <p>{{ weatherInfo }}</p>
+      <img class="mx-auto" src="{{ weatherIcon }}" alt="{{ weatherDescription }}" title="{{ weatherDescription }}" (click)="toggleDetails()">
+    </div>
   </div>
-  <div id="map" class="z-0 h-[800px]"></div>
+  <div class="z-0 h-[700px] invert-[.75] " id="map"></div>
+  <app-details></app-details>
 </div>
