--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div class="bg-[#0F172A] h-screen">
+<div class="bg-[url('assets/scroll.jpg')] bg-cover h-screen">
   <router-outlet></router-outlet>
 </div>
