--- a/my-app/src/app/components/navbar/navbar.component.html
+++ b/my-app/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <header class="flex justify-between h-20 items-center bg-gray-600 sm:bg-opacity-50 border-b-2 border-black">
     <img class="sm:ml-10 max-h-12" src=".\assets\MeteoTracker.png" href="/" alt="MeteoTracker">
-    <div class="container flex justify-evenly">
-      <div class="flex justify-between justify-self-end gap-10">
+    <div class="container flex justify-end mr-10">
+      <div class="flex gap-10 content-end">
         <div class="flex">
           <img class="h-8 rounded-full" [src]="profile.picture" alt="Photo de profil">
           <a class="text-purple-800 text-2xl font-bold" href="/user">{{ profile.name }}</a>
