--- a/my-app/src/app/components/google-log-in/google-log-in.component.html
+++ b/my-app/src/app/components/google-log-in/google-log-in.component.html
@@ -1,11 +1,12 @@
 <div class="fixed inset-0 flex items-center justify-center z-50 bg-black bg-opacity-50 backdrop-blur">
-    <!-- Image de fond -->
     <img src="assets/map.webp" alt="map" class="absolute inset-0 w-full h-full object-cover blur-lg">
     
-    <!-- Modale -->
     <div class="bg-[url('assets/scroll.jpg')] bg-cover m-8 p-8 rounded-lg shadow-lg relative z-10 text-center">
-      <h1 class="text-xl font-bold mb-4">Oyé Oyé</h1>
-      <p class="m-4">De part votre connection, nous reçevons votre consentement à nos CGU et de de ce fait à l'utilisation de votre géolocalisation.</p>
+      <h1 class="text-xl font-bold mb-4">Merci d'avoir choisi MeteTracker</h1>
+      <p class="m-4">De part votre connection, nous reçevons votre consentement à nos 
+        <span>
+          <a class="text-blue-600 underline" href="/cgu">CGU</a>
+        </span> et de de ce fait à l'utilisation de votre géolocalisation.</p>
       <div>
         <div class="bg-blue-500 text-white py-2 px-4 rounded-xl cursor-pointer" id="google-login-button" (click)="signInWithGoogle()">Se connecter avec Google</div>
       </div>
