--- a/my-app/src/app/components/map/map.component.html
+++ b/my-app/src/app/components/map/map.component.html
@@ -6,13 +6,5 @@
       <img class="mx-auto" src="{{ weatherIcon }}" alt="{{ weatherDescription }}" title="{{ weatherDescription }}">
     </div>
   </div>
-  <div class="z-0 h-[700px] invert-[.80]" id="map">
-    <div class="absolute top-5 left-5 z-50" (click)="goBackToLocalisation()">
-      <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/>
-        </svg>
-      </button>
-    </div>    
-  </div>
+  <div class="z-0 h-[700px] invert-[.80]" id="map"></div>
 </div>
