Je m'a trompé dsl

--- a/my-app/src/app/components/google-log-in/google-log-in.component.html
+++ b/my-app/src/app/components/google-log-in/google-log-in.component.html
@@ -2,7 +2,7 @@
     <img src="assets/map.webp" alt="map" class="absolute inset-0 w-full h-full object-cover blur-lg">
     
     <div class="bg-[url('assets/scroll.jpg')] bg-cover m-8 p-8 rounded-lg shadow-lg relative z-10 text-center">
-      <h1 class="text-xl font-bold mb-4">Merci d'avoir choisi MeteTracker</h1>
+      <h1 class="text-xl font-bold mb-4">Merci d'avoir choisi MeteoTracker</h1>
       <p class="m-4">De part votre connection, nous reçevons votre consentement à nos 
         <span>
           <a class="text-blue-600 underline" href="/cgu">CGU</a>
