--- a/my-app/src/app/components/map/map.component.html
+++ b/my-app/src/app/components/map/map.component.html
@@ -6,5 +6,5 @@
       <img class="mx-auto" src="{{ weatherIcon }}" alt="{{ weatherDescription }}" title="{{ weatherDescription }}">
     </div>
   </div>
-  <div class="z-0 h-[700px] invert-[.80]" id="map"></div>
+  <div class="z-0 sm:h-[700px] h-[850px] invert-[.80]" id="map"></div>
 </div>
